kubernetes/apps/default/home-assistant/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "hass.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
